docs/envoy/v1.16.0/_sources/api-v3/service/status/v3/csds.proto.rst.txt
.. _envoy_v3_api_file_envoy/service/status/v3/csds.proto:

Client Status Discovery Service (CSDS)
======================================


.. _envoy_v3_api_msg_service.status.v3.ClientStatusRequest:

service.status.v3.ClientStatusRequest
-------------------------------------

`[service.status.v3.ClientStatusRequest proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/service/status/v3/csds.proto#L76>`_

Request for client status of clients identified by a list of NodeMatchers.

.. code-block:: json

  {
    "node_matchers": [],
    "node": "{...}"
  }

.. _envoy_v3_api_field_service.status.v3.ClientStatusRequest.node_matchers:

node_matchers
  (:ref:`type.matcher.v3.NodeMatcher <envoy_v3_api_msg_type.matcher.v3.NodeMatcher>`) Management server can use these match criteria to identify clients.
  The match follows OR semantics.
  
  
.. _envoy_v3_api_field_service.status.v3.ClientStatusRequest.node:

node
  (:ref:`config.core.v3.Node <envoy_v3_api_msg_config.core.v3.Node>`) The node making the csds request.
  
  


.. _envoy_v3_api_msg_service.status.v3.PerXdsConfig:

service.status.v3.PerXdsConfig
------------------------------

`[service.status.v3.PerXdsConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/service/status/v3/csds.proto#L90>`_

Detailed config (per xDS) with status.

.. code-block:: json

  {
    "status": "...",
    "client_status": "...",
    "listener_config": "{...}",
    "cluster_config": "{...}",
    "route_config": "{...}",
    "scoped_route_config": "{...}",
    "endpoint_config": "{...}"
  }

.. _envoy_v3_api_field_service.status.v3.PerXdsConfig.status:

status
  (:ref:`service.status.v3.ConfigStatus <envoy_v3_api_enum_service.status.v3.ConfigStatus>`) Config status generated by management servers. Will not be present if the
  CSDS server is an xDS client.
  
  
.. _envoy_v3_api_field_service.status.v3.PerXdsConfig.client_status:

client_status
  (:ref:`service.status.v3.ClientConfigStatus <envoy_v3_api_enum_service.status.v3.ClientConfigStatus>`) Client config status is populated by xDS clients. Will not be present if
  the CSDS server is an xDS server. No matter what the client config status
  is, xDS clients should always dump the most recent accepted xDS config.
  
  
.. _envoy_v3_api_field_service.status.v3.PerXdsConfig.listener_config:

listener_config
  (:ref:`admin.v3.ListenersConfigDump <envoy_v3_api_msg_admin.v3.ListenersConfigDump>`) 
  
  
  Only one of :ref:`listener_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.listener_config>`, :ref:`cluster_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.cluster_config>`, :ref:`route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.route_config>`, :ref:`scoped_route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.scoped_route_config>`, :ref:`endpoint_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.endpoint_config>` may be set.
  
.. _envoy_v3_api_field_service.status.v3.PerXdsConfig.cluster_config:

cluster_config
  (:ref:`admin.v3.ClustersConfigDump <envoy_v3_api_msg_admin.v3.ClustersConfigDump>`) 
  
  
  Only one of :ref:`listener_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.listener_config>`, :ref:`cluster_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.cluster_config>`, :ref:`route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.route_config>`, :ref:`scoped_route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.scoped_route_config>`, :ref:`endpoint_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.endpoint_config>` may be set.
  
.. _envoy_v3_api_field_service.status.v3.PerXdsConfig.route_config:

route_config
  (:ref:`admin.v3.RoutesConfigDump <envoy_v3_api_msg_admin.v3.RoutesConfigDump>`) 
  
  
  Only one of :ref:`listener_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.listener_config>`, :ref:`cluster_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.cluster_config>`, :ref:`route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.route_config>`, :ref:`scoped_route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.scoped_route_config>`, :ref:`endpoint_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.endpoint_config>` may be set.
  
.. _envoy_v3_api_field_service.status.v3.PerXdsConfig.scoped_route_config:

scoped_route_config
  (:ref:`admin.v3.ScopedRoutesConfigDump <envoy_v3_api_msg_admin.v3.ScopedRoutesConfigDump>`) 
  
  
  Only one of :ref:`listener_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.listener_config>`, :ref:`cluster_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.cluster_config>`, :ref:`route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.route_config>`, :ref:`scoped_route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.scoped_route_config>`, :ref:`endpoint_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.endpoint_config>` may be set.
  
.. _envoy_v3_api_field_service.status.v3.PerXdsConfig.endpoint_config:

endpoint_config
  (:ref:`admin.v3.EndpointsConfigDump <envoy_v3_api_msg_admin.v3.EndpointsConfigDump>`) 
  
  
  Only one of :ref:`listener_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.listener_config>`, :ref:`cluster_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.cluster_config>`, :ref:`route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.route_config>`, :ref:`scoped_route_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.scoped_route_config>`, :ref:`endpoint_config <envoy_v3_api_field_service.status.v3.PerXdsConfig.endpoint_config>` may be set.
  


.. _envoy_v3_api_msg_service.status.v3.ClientConfig:

service.status.v3.ClientConfig
------------------------------

`[service.status.v3.ClientConfig proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/service/status/v3/csds.proto#L118>`_

All xds configs for a particular client.

.. code-block:: json

  {
    "node": "{...}",
    "xds_config": []
  }

.. _envoy_v3_api_field_service.status.v3.ClientConfig.node:

node
  (:ref:`config.core.v3.Node <envoy_v3_api_msg_config.core.v3.Node>`) Node for a particular client.
  
  
.. _envoy_v3_api_field_service.status.v3.ClientConfig.xds_config:

xds_config
  (:ref:`service.status.v3.PerXdsConfig <envoy_v3_api_msg_service.status.v3.PerXdsConfig>`) 
  


.. _envoy_v3_api_msg_service.status.v3.ClientStatusResponse:

service.status.v3.ClientStatusResponse
--------------------------------------

`[service.status.v3.ClientStatusResponse proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/service/status/v3/csds.proto#L128>`_


.. code-block:: json

  {
    "config": []
  }

.. _envoy_v3_api_field_service.status.v3.ClientStatusResponse.config:

config
  (:ref:`service.status.v3.ClientConfig <envoy_v3_api_msg_service.status.v3.ClientConfig>`) Client configs for the clients specified in the ClientStatusRequest.
  
  

.. _envoy_v3_api_enum_service.status.v3.ConfigStatus:

Enum service.status.v3.ConfigStatus
-----------------------------------

`[service.status.v3.ConfigStatus proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/service/status/v3/csds.proto#L37>`_

Status of a config from a management server view.

.. _envoy_v3_api_enum_value_service.status.v3.ConfigStatus.UNKNOWN:

UNKNOWN
  *(DEFAULT)* ⁣Status info is not available/unknown.
  
  
.. _envoy_v3_api_enum_value_service.status.v3.ConfigStatus.SYNCED:

SYNCED
  ⁣Management server has sent the config to client and received ACK.
  
  
.. _envoy_v3_api_enum_value_service.status.v3.ConfigStatus.NOT_SENT:

NOT_SENT
  ⁣Config is not sent.
  
  
.. _envoy_v3_api_enum_value_service.status.v3.ConfigStatus.STALE:

STALE
  ⁣Management server has sent the config to client but hasn’t received
  ACK/NACK.
  
  
.. _envoy_v3_api_enum_value_service.status.v3.ConfigStatus.ERROR:

ERROR
  ⁣Management server has sent the config to client but received NACK. The
  attached config dump will be the latest config (the rejected one), since
  it is the persisted version in the management server.
  
  

.. _envoy_v3_api_enum_service.status.v3.ClientConfigStatus:

Enum service.status.v3.ClientConfigStatus
-----------------------------------------

`[service.status.v3.ClientConfigStatus proto] <https://github.com/envoyproxy/envoy/blob/v1.16.0/api/envoy/service/status/v3/csds.proto#L58>`_

Config status from a client-side view.

.. _envoy_v3_api_enum_value_service.status.v3.ClientConfigStatus.CLIENT_UNKNOWN:

CLIENT_UNKNOWN
  *(DEFAULT)* ⁣Config status is not available/unknown.
  
  
.. _envoy_v3_api_enum_value_service.status.v3.ClientConfigStatus.CLIENT_REQUESTED:

CLIENT_REQUESTED
  ⁣Client requested the config but hasn't received any config from management
  server yet.
  
  
.. _envoy_v3_api_enum_value_service.status.v3.ClientConfigStatus.CLIENT_ACKED:

CLIENT_ACKED
  ⁣Client received the config and replied with ACK.
  
  
.. _envoy_v3_api_enum_value_service.status.v3.ClientConfigStatus.CLIENT_NACKED:

CLIENT_NACKED
  ⁣Client received the config and replied with NACK. Notably, the attached
  config dump is not the NACKed version, but the most recent accepted one. If
  no config is accepted yet, the attached config dump will be empty.
  
  
